@@ -1,3 +1,5 @@
+1723.	[cleanup]	Silence compiler warnings from t_tasks.c. [RT #12493]
+
 1722.	[bug]		Don't commit the journal on malformed ixfr streams.
 			[RT #12519]
 
